manifests/csi-attacher.yaml
kind: Service
apiVersion: v1
metadata:
  name: csi-attacher-cinderplugin
  namespace: kube-system
  labels:
    app: csi-attacher-cinderplugin
spec:
  selector:
    app: csi-attacher-cinderplugin
  ports:
    - name: dummy
      port: 12345

---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: csi-attacher-cinderplugin
  namespace: kube-system
spec:
  serviceName: "csi-attacher-cinderplugin"
  replicas: 1
  selector:
    matchLabels:
      app: csi-attacher-cinderplugin
  template:
    metadata:
      labels:
        app: csi-attacher-cinderplugin
    spec:
      serviceAccount: csi-attacher
      containers:
        - name: csi-attacher
          image: quay.io/k8scsi/csi-attacher:v1.0.1
          args:
            - "--v=5"
            - "--csi-address=$(ADDRESS)"
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
        - name: cinder
          image: docker.io/k8scloudprovider/cinder-csi-plugin:v1.14.0
          args :
            - /bin/cinder-csi-plugin
            - "--nodeid=$(NODE_ID)"
            - "--endpoint=$(CSI_ENDPOINT)"
            - "--cloud-config=$(CLOUD_CONFIG)"
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
            - mountPath: /etc/cloud/cloud-config.conf
              name: cloudconfig
              readOnly: true
            - mountPath: /etc/ssl/certs/cloud-trust.pem
              name: cloudtrust
              readOnly: true
      volumes:
        - name: socket-dir
          emptyDir: {}
        - hostPath:
            path: /etc/cloud/cloud-config.conf
            type: FileOrCreate
          name: cloudconfig
        - hostPath:
            path: /etc/cloud/cloud-trust.pem
            type: FileOrCreate
          name: cloudtrust
